Organize file structure and refactor some files
